--- a/indexListasAnidadas.html
+++ b/indexListasAnidadas.html
@@ -40,7 +40,7 @@
         <section>
             <h2>Modalidad de cursada</h2>
             <ul>
-                <li><strong>Contenidos en vivo:</strong></li>
+                <li><b>Contenidos en vivo:</b></li>
                 <br>
                 <ul>
                     <li>Clases online en zoom</li>
@@ -48,7 +48,7 @@
                     <li>Clases de Repaso</li>
                 </ul>
                 <br>
-                <li><strong>Contenido Teórico-práctico</strong></li>
+                <li><b>Contenido Teórico-práctico</b></li>
                 <br>
                 <ul>
                     <li>Teórico:</li>
